# wildberries_project_tests

./: .env.bstack.example  .env.emulator.example  .env.real_device.example  .gitattributes  .gitignore  README.md  config.py  pyproject.toml  wildberries.apk
json_schemas/: change_currency.json  search_item_by_id.json
tests/api/: test_currency.py  test_rabota.py  test_search_item.py  test_services.py  test_travel.py
tests/mobile/: conftest.py  test_add_item_to_favorite.py  test_catalog.py  test_choice_country.py  test_search_item.py  test_vacancies.py
tests/ui/: conftest.py  test_chat.py  test_currency.py  test_product.py
wildberries_project_tests/models/: popup.py
wildberries_project_tests/models/pages/: cart_page.py  catalog_page.py  currency_page.py  home_page.py
wildberries_project_tests/utils/: attach.py  notifications.py  requests_helper.py  resource.py
